--- a/package.json
+++ b/package.json
@@ -14,7 +14,14 @@
     "@aws-cdk/assert": "1.38.0",
     "@types/jest": "^25.2.1",
     "@types/node": "^13.13.5",
+    "@typescript-eslint/eslint-plugin": "^2.31.0",
+    "@typescript-eslint/parser": "^2.31.0",
     "aws-cdk": "1.38.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-import-resolver-typescript": "^2.0.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jest": "^23.10.0",
     "jest": "^26.0.1",
     "ts-jest": "^25.3.1",
     "ts-node": "^8.1.0",
