--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
   },
   "scripts": {
     "build": "tsc",
+    "build:src": "tsc -p src",
     "watch": "tsc -w",
     "test": "jest",
     "eslint": "./node_modules/.bin/eslint . --ext .ts",
-    "clean": "rm -rf ./{bin,lib,test}/{**,}/{*.d.ts,*.js}",
+    "clean": "rm -rf ./{bin,lib,src,test}/{**,}/{*.d.ts,*.js}",
     "cdk": "cdk"
   },
   "devDependencies": {
     "@aws-cdk/assert": "1.38.0",
+    "@types/aws-lambda": "^8.10.51",
     "@types/config": "^0.0.36",
     "@types/jest": "^25.2.1",
     "@types/node": "^13.13.5",
@@ -31,8 +33,10 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
+    "@aws-cdk/aws-lambda": "^1.38.0",
     "@aws-cdk/core": "1.38.0",
     "config": "^3.3.1",
     "source-map-support": "^0.5.16"
-  }
+  },
+  "license": "MIT"
 }
